--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.16.2
-yarn_mappings=1.16.2+build.43
-loader_version=+
+minecraftVersion=1.16.2
+yarnMappings=1.16.2+build.43
+loaderVersion=+
 # Mod Properties
-mod_version=6.1
-maven_group=net.devtech
-archives_base_name=grossfabrichacks
+modVersion=6.2
+mavenGroup=net.devtech
+baseName=grossfabrichacks
