--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraftVersion=1.16.2
-yarnMappings=1.16.2+build.43
+minecraftVersion=1.16.3
+yarnBuild=30
 loaderVersion=+
 # Mod Properties
-modVersion=6.33
 mavenGroup=net.devtech
 baseName=grossfabrichacks
+modVersion=7.0
