--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ dependencies {
     modApi("user11681:narratoroff:+")
 
     modApi(include("net.bytebuddy:byte-buddy-agent:+"))
-    modApi(include("net.gudenau.lib:unsafe:1.3.1"))
-    modApi(include("user11681:dynamicentry:0.1.2"))
-    modApi(include("user11681:reflect:0.11.1"))
+    modApi(include("net.gudenau.lib:unsafe:+"))
+    modApi(include("user11681:dynamicentry:+"))
+    modApi(include("user11681:reflect:+"))
 }
 
 configurations.all {
