--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraftVersion=1.16.3
-yarnBuild=30
+minecraftVersion=1.16.4-pre1
+yarnBuild=1
 loaderVersion=+
 # Mod Properties
 mavenGroup=net.devtech
 baseName=grossfabrichacks
-modVersion=7.8
+modVersion=7.9
