--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     modApi(include("net.bytebuddy:byte-buddy-agent:+"))
     modApi(include("net.gudenau.lib:unsafe:+"))
     modApi(include("user11681:dynamicentry:+"))
-    modApi(include("user11681:reflect:0.11.6"))
+    modApi(include("user11681:reflect:+"))
 
     modApi("net.fabricmc.fabric-api:fabric-api:+")
 }
