--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraftVersion=1.16.3
-yarnBuild=30
+minecraftVersion=1.16.4-pre2
+yarnBuild=1
 loaderVersion=+
 # Mod Properties
 mavenGroup=net.devtech
