--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraftVersion=1.16.4-pre2
+minecraftVersion=20w48a
 yarnBuild=1
 loaderVersion=+
 # Mod Properties
