--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,17 @@
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=true
+
+# Fabric Properties
+# check these on https://fabricmc.net/use
+    minecraft_version=1.17.1
+    yarn_mappings=1.17.1+build.11
+    loader_version=0.11.6
+
+# Mod Properties
+    mod_version = 1.0.4
+    maven_group = net.devtech
+    archives_base_name = grossfabrichacks
+
+# Dependencies
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+    fabric_version=0.37.0+1.17
